--- a/dashboard.html
+++ b/dashboard.html
@@ -1722,6 +1722,8 @@
         // автообновление раз в 5 минут
         setInterval(loadUserData, 300000);
         </script>
+        
+        <script src="/donation-fix.js"></script>
 
 </body>
 </html>
