--- a/dashboard.html
+++ b/dashboard.html
@@ -1400,7 +1400,7 @@
                 alert(`✅ ${ticker} added to portfolio!\n\nPortfolio page coming soon.`);
 
                 // Когда будет готова страница portfolio.html - раскомментируй:
-                // window.location.href = `/portfolio?ticker=${ticker}`;
+                window.location.href = `/portfolio?ticker=${ticker}`;
             }
 
                 // Добавляем в портфолио
