--- a/dashboard.html
+++ b/dashboard.html
@@ -1094,7 +1094,7 @@
 
                 <div class="action-buttons">
                     <a href="javascript:goToFullAnalysis()" class="action-btn">Full Analysis</a>
-                    <a href="#" class="action-btn primary">Add to Portfolio</a>
+                    <a href="javascript:addToPortfolio()" class="action-btn primary">Add to Portfolio</a>
                 </div>
             </div>
 
@@ -1795,6 +1795,7 @@
         </script>
         
         <script src="/donation-fix.js"></script>
+        <script src="/footer.js"></script>
 
 </body>
 </html>
